[gd_scene load_steps=4 format=3 uid="uid://planet_surface_scene"]

[ext_resource type="Script" path="res://scenes/planet_surface/planet_surface.gd" id="1"]
[ext_resource type="Script" path="res://packages/render/tile_streamer.gd" id="2"]
[ext_resource type="Script" path="res://packages/gameplay/character_controller.gd" id="3"]

[sub_resource type="Environment" id="Environment_world"]
background_mode = 1
background_color = Color(0.3, 0.4, 0.5, 1)
ambient_light_source = 2
ambient_light_color = Color(0.35, 0.4, 0.45, 1)
ambient_light_energy = 0.5
fog_enabled = true
fog_light_color = Color(0.5, 0.55, 0.6, 1)
fog_density = 0.001

[node name="PlanetSurface" type="Node3D"]
script = ExtResource("1")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_world")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866, -0.433, 0.25, 0, 0.5, 0.866, -0.5, -0.75, 0.433, 0, 100, 0)
light_color = Color(1, 0.98, 0.9, 1)
light_energy = 1.2
shadow_enabled = true

[node name="TileStreamer" type="Node3D" parent="."]
script = ExtResource("2")
tile_size = 500.0
view_distance = 3
height_scale = 100.0
tile_resolution = 33

[node name="Character" type="Node3D" parent="."]
script = ExtResource("3")
move_speed = 15.0
camera_distance = 10.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="BackButton" type="Button" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 180.0
offset_bottom = 45.0
text = "< Back to System"

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 400.0
offset_bottom = 150.0

[node name="PlanetLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 400.0
offset_bottom = 75.0
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 20
text = "Planet Name"

[node name="BiomeLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 10.0
offset_top = 80.0
offset_right = 300.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(0.7, 0.8, 0.7, 1)
text = "Biome: Unknown"

[node name="PositionLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 10.0
offset_top = 105.0
offset_right = 300.0
offset_bottom = 125.0
theme_override_colors/font_color = Color(0.6, 0.7, 0.8, 1)
text = "Position: 0, 0, 0"

[node name="ControlsLabel" type="Label" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -50.0
offset_right = 300.0
offset_bottom = -10.0
theme_override_colors/font_color = Color(0.5, 0.6, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "WASD: Move | Shift: Run | Space: Jump | E: Interact | Mouse: Look | Tab: Cursor | ESC: Back"
horizontal_alignment = 1
